# hermes-migrate

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  hermes-migrate  install.sh  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
hermes_migrate/: __init__.py  cli.py  migrate.py
openclaw_to_hermes/: cli.py  migrate.py
tests/: conftest.py  test_cli.py  test_migrate.py  test_security.py
