[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-to-hermes"
version = "1.0.0"
description = "One-click migration tool from OpenClaw to Hermes AI agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
openclaw-to-hermes = "openclaw_to_hermes.cli:main"

[project.urls]
Homepage = "https://github.com/raulvidis/openclaw-to-hermes"
Repository = "https://github.com/raulvidis/openclaw-to-hermes"
Issues = "https://github.com/raulvidis/openclaw-to-hermes/issues"

[tool.setuptools.packages.find]
where = ["."]
