[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-migrate"
dynamic = ["version"]
description = "One-click migration from OpenClaw to Hermes AI agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Raul Vidis", email = "raul@vidis.dev"},
]
keywords = ["openclaw", "hermes", "hermes-migrate", "migration", "ai-agent", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
hermes-migrate = "hermes_migrate.cli:main"

[project.urls]
Homepage = "https://github.com/raulvidis/hermes-migrate"
Repository = "https://github.com/raulvidis/hermes-migrate"
Issues = "https://github.com/raulvidis/hermes-migrate/issues"
Changelog = "https://github.com/raulvidis/hermes-migrate/releases"

[tool.setuptools.dynamic]
version = {attr = "hermes_migrate.__version__"}

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
